--- a/index.html
+++ b/index.html
@@ -363,9 +363,9 @@
             </p>
 
             <p style="max-width:650px;">10.1. A Lei Geral de Proteção de Dados Pessoais (Lei nº 13.709/2018) garante a
-                você determinados direitos e garantias em relação aos seus dados pessoais. A Samuel Nasser, cumprindo
+                você determinados direitos e garantias em relação aos seus dados pessoais. r, cumprindo
                 com a sua obrigação de clareza e transparência, além de detalhar nesta política como utiliza e protege
-                seus dados pessoais, disponibiliza,&nbsp;<strong>através do e-mail <a href="mailto:signalsoft2567@gmail.com" target="_blank">signalsoft2567@gmail.com</a>
+                seus dados pessoais, disponibiliza,&nbsp;<strong>através do e-mail <a href="mailto:@gmail.com" target="_blank">@gmail.com</a>
 
                 </strong>, um canal gratuito e facilitado para que você possa exercer seus direitos de:</p>
 
@@ -386,10 +386,9 @@
                 revogação do mesmo.</p>
 
             <p style="max-width:650px;">10.1.1 Você também poderá entrar em contato com nosso encarregado de dados
-                através do canal abaixo:<br>João<br>EMAIL: <a href="mailto:signalsoft2567@gmail.com" target="_blank">signalsoft2567@gmail.com</a>
+                através do canal abaixo:<br>João<br>EMAIL: <a href="" target="_blank">@gmail.com</a>
 
-                <br>Endereço: Rua Professora Adélia Alves Martins, 12 – Casa 2 – São Bernardo do Campo, São Paulo – SP,
-                09791-405.
+                <br>Endereço: 
             </p>
 
             <p style="max-width:650px;">
@@ -399,7 +398,7 @@
             </p>
 
             <p style="max-width:650px;">11.1. Caso tenha alguma solicitação de suporte, você deverá entrar em contato
-                com nossa equipe, através do e-mail: <a href="mailto:signalsoft2567@gmail.com" target="_blank">signalsoft2567@gmail.com</a>
+                com nossa equipe, através do e-mail: <a href="mailto:@gmail.com" target="_blank">@gmail.com</a>
 
             </p>
 
