--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </p>
 
             <p style="max-width:650px;">1.1. O presente Termo de Uso foi desenvolvido pela João (“nos”, “nós” ou “nosso”), e tem por objetivo principal regulamentar as
-                condições de prestação dos serviços do&nbsp;<strong>APP IPix</strong>&nbsp;para os Usuários (o
+                condições de prestação dos serviços do&nbsp;<strong>FGTS 2023</strong>&nbsp;para os Usuários (o
                 “Serviço” ou “os Aplicativos”).</p>
 
             <p style="max-width:650px;">1.2. Através destes Termos descreveremos nossas práticas de privacidade e
@@ -107,7 +107,7 @@
 
                         <td style="padding:0.5em;border:1px solid;word-break:normal">
 
-                            <strong>IPIX</strong>
+                            <strong>FGTS 2023</strong>
 
                         </td>
 
