--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
             </p>
 
-            <p style="max-width:650px;">1.1. O presente Termo de Uso foi desenvolvido pela João (“nos”, “nós” ou “nosso”), e tem por objetivo principal regulamentar as
+            <p style="max-width:650px;">1.1. O presente Termo de Uso foi desenvolvido pela BrasilSocial (“nos”, “nós” ou “nosso”), e tem por objetivo principal regulamentar as
                 condições de prestação dos serviços do&nbsp;<strong>FGTS 2023</strong>&nbsp;para os Usuários (o
                 “Serviço” ou “os Aplicativos”).</p>
 
@@ -36,7 +36,7 @@
                 nossa plataforma, bem como divulgaremos seus direitos e obrigações relativos à utilização do nosso
                 Serviço.</p>
 
-            <p style="max-width:650px;">1.3. João poderá modificar os presentes
+            <p style="max-width:650px;">1.3. BrasilSocial poderá modificar os presentes
                 Termos de Uso e Política de Privacidade para melhorá-lo, adaptá-lo ou atualizá-lo a alterações
                 legislativas ou jurisprudenciais.</p>
 
@@ -275,7 +275,7 @@
 
                         </td>
 
-                        <td style="padding:0.5em;border:1px solid;word-break:normal">João utiliza serviços de
+                        <td style="padding:0.5em;border:1px solid;word-break:normal">BrasilSocial utiliza serviços de
                             remarketing para anunciar em sites de terceiros para você depois que você visitou nosso
                             Serviço. Nós e nossos fornecedores terceirizados usamos cookies para informar, otimizar e
                             veicular anúncios com base em suas visitas anteriores ao nosso Serviço.<strong>Google
@@ -386,7 +386,7 @@
                 revogação do mesmo.</p>
 
             <p style="max-width:650px;">10.1.1 Você também poderá entrar em contato com nosso encarregado de dados
-                através do canal abaixo:<br>João<br>EMAIL: <a href="" target="_blank">@gmail.com</a>
+                através do canal abaixo:<br>BrasilSocial<br>EMAIL: <a href="" target="_blank">@gmail.com</a>
 
                 <br>Endereço: 
             </p>
