--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <strong>Aviso</strong>
             </p>
               <p style="max-width:650px;">
-             Esse aplicativo NÃO possui vínculo com o Governo Federal do Brasil, com a Caixa Econômica (CEF) ou qualquer uma de suas empresas ou entidades governamentais. Todas as consultas de informações oficiais são feitas em APIs abertas ou extraídas de bases de Dados Abertos (Decreto nº 8.777, de 11 de maio de 2016). Leia nossa Política de Privacidade (encontra-se ao final desta página e também dentro do aplicativo). O decreto Nº 8.777, de 11 de maio de 2016 define que a API de dados do Portal da Transparência do Governo Federal é de livre utilização por todos. Em caso de dúvidas acesse:
- http://www.portaltransparencia.gov.br/api-de-dados
+             Esse aplicativo NÃO possui vínculo com o Governo Federal do Brasil, com a Caixa Econômica (CEF) ou qualquer uma de suas empresas ou entidades governamentais. Todas as consultas de informações oficiais são feitas em APIs abertas ou extraídas de bases de Dados Abertos (Decreto nº 8.777, de 11 de maio de 2016). Leia nossa Política de Privacidade (encontra-se ao final desta página e também dentro do aplicativo). O decreto Nº 8.777, de 11 de maio de 2016 define que a API de dados do Portal da Transparência do Governo Federal é de livre utilização por todos. Fonte:
+ https://portaldatransparencia.gov.br/api-de-dados
 https://www.gov.br/capes/pt-br/acesso-a-informacao/servico-de-informacao-ao-cidadao/sobre-a-lei-de-acesso-a-informacao</p>
         </div>
         <div style="box-sizing:border-box">
